--- a/man/crypt.1
+++ b/man/crypt.1
@@ -39,6 +39,10 @@ Don\'t print a newline after the output\.
 Specify the salt to use\.
 .
 .TP
+\fB\-v\fR, \fB\-\-version\fR
+Print program version\.
+.
+.TP
 \fB\-h\fR, \fB\-?\fR, \fB\-\-help\fR
 Print usage information\.
 .
